code refactored. Added classes for chap06 and chap09