@@ -18,9 +18,9 @@ import static java.util.stream.Collectors.toList;
  */
 public final class Album implements Performance {
 
-  private String name;
-  private List<Track> tracks;
-  private List<Artist> musicians;
+  private final String name;
+  private final List<Track> tracks;
+  private final List<Artist> musicians;
 
   public Album(String name, List<Track> tracks, List<Artist> musicians) {
     Objects.requireNonNull(name);
@@ -68,7 +68,7 @@ public final class Album implements Performance {
   }
 
   public Artist getMainMusician() {
-    return musicians.get(0);
+    return musicians.getFirst();
   }
 
   public Album copy() {
@@ -76,5 +76,4 @@ public final class Album implements Performance {
     List<Artist> musicians = getMusicians().map(Artist::copy).collect(toList());
     return new Album(name, tracks, musicians);
   }
-
 }
